# cardiac-shared

./: .env.example  .gitignore  .pypirc.example  CHANGELOG.md  CLAUDE.md  FEEDBACK.md  LICENSE  README.md  VERSIONING.md  pyproject.toml  pyrightconfig.json  requirements.txt
cardiac_shared/: __init__.py
cardiac_shared/batch/: __init__.py
cardiac_shared/cache/: __init__.py
cardiac_shared/config/: __init__.py
cardiac_shared/data/: __init__.py  batch_discovery.py  batch_manager.py  datasets.py  paired_dataset.py  registry.py
cardiac_shared/data_sources/: __init__.py  manager.py
cardiac_shared/environment/: __init__.py  runtime_detector.py
cardiac_shared/hardware/: __init__.py  cpu_optimizer.py  detector.py  gpu_utils.py  optimizer.py  profiles.py
cardiac_shared/io/: __init__.py  dicom.py  nifti.py  preloader.py  zip_handler.py
cardiac_shared/parallel/: __init__.py  processor.py
cardiac_shared/preprocessing/: __init__.py  dicom_converter.py  pipeline.py  thickness.py
cardiac_shared/progress/: __init__.py  tracker.py
cardiac_shared/tissue/: __init__.py  classifier.py
cardiac_shared/utils/: __init__.py
cardiac_shared/vertebra/: __init__.py  detector.py
docs/: ARCHITECTURE_DESIGN.md  PYPI_REFERENCE_PYOBFUS.md  PYPI_RELEASE_PLAN.md  PYPI_TOKEN_REFERENCE.md  ROADMAP_v0.6.0_AND_BEYOND.md
examples/: datasets_registry_template.yaml
tests/: __init__.py  test_batch_manager.py  test_data_registry.py  test_data_sources.py  test_datasets.py  test_environment.py  test_gpu_utils.py  test_hardware.py  test_imports.py  test_preloader.py  test_preprocessing.py  test_tissue.py  test_vertebra.py
