[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cardiac-shared"
version = "0.9.1"
description = "Shared utilities for cardiac imaging analysis - batch management, preprocessing pipelines, hardware detection, IO, data sources, vertebra detection, tissue classification, dataset registry, thickness detection, paired dataset management"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Rong Zhu", email = "zhurong0525@gmail.com"}
]
maintainers = [
    {name = "Rong Zhu", email = "zhurong0525@gmail.com"}
]
keywords = [
    "cardiac",
    "medical-imaging",
    "dicom",
    "nifti",
    "ct-scan",
    "hardware-detection",
    "gpu",
    "totalsegmentator"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Healthcare Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "numpy>=1.19.0,<2.0",
    "psutil>=5.8.0",
    "pyyaml>=5.3.0",
]

[project.optional-dependencies]
dicom = ["pydicom>=2.0.0"]
nifti = ["nibabel>=3.2.0"]
gpu = ["torch>=1.9.0"]
all = [
    "pydicom>=2.0.0",
    "nibabel>=3.2.0",
    "torch>=1.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/zhurong2020/cardiac-shared"
Documentation = "https://github.com/zhurong2020/cardiac-shared/blob/main/README.md"
Repository = "https://github.com/zhurong2020/cardiac-shared"
"Bug Tracker" = "https://github.com/zhurong2020/cardiac-shared/issues"
Changelog = "https://github.com/zhurong2020/cardiac-shared/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["cardiac_shared*"]
exclude = ["tests*", "docs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
